Tomcat-DB/fcc_tomcat_mysql/fccapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fccappsvc
  labels:
    app: fcctomcat
    io.service: fccapp
spec:
  # type: NodePort
  selector:
    io.service: fccapp
  ports:
  - port: 8080
    targetPort: 8080
status:
  loadBalancer: {}
