Tomcat-DB/fcc_tomcat_mysql/fccingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fccapp
  labels:
    app: fcctomcat
    io.service: fccapp
  annotations:
    kubernetes.io/ingress.class: ffdcdev-private
spec:
  tls:
    - hosts:
        - fbccmysql.ffdcdev.fusionfabric.io
  rules:
    - host: fbccmysql.ffdcdev.fusionfabric.io
      http:
        paths:
        # - path: /FCC/portal
        #   pathType: Prefix
        - backend:
            serviceName: fccappsvc
            servicePort: 8080
status:
  loadBalancer:
    ingress:
      - ip: 10.206.16.254
